# OSlash

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Oslash.pyproj  Oslash.sln  README.md  README.rst  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  setup.py  Ø.pyproj  Ø.sln
.github/: release-please-config.json
.github/workflows/: ci.yml  python-package.yml  python-publish.yml  release-please.yml
examples/: hello.py  hello2.py  hello3.py  issue.py
notebooks/: README.md  Reader.ipynb
oslash/: __init__.py  _version.py  applicative.py  callable.py  cont.py  do.py  either.py  functor.py  identity.py  ioaction.py  list.py  maybe.py  monad.py  monadic.py  monoid.py  observable.py  reader.py  state.py  writer.py
oslash/abc/: __init__.py  applicative.py  functor.py  monad.py  monoid.py
oslash/typing/: __init__.py  applicative.py  functor.py  monad.py  monoid.py
oslash/util/: __init__.py  basic.py  compose.py  extensionmethod.py  fn.py  numerals.py
tests/: test_callable.py  test_cont.py  test_do.py  test_either.py  test_identity.py  test_ioaction.py  test_list.py  test_maybe.py  test_monad.py  test_numerals.py  test_observable.py  test_reader.py  test_state.py  test_util.py  test_writer.py
ø/: __init__.py  applicative.py  either.py  functor.py  list.py  maybe.py  monad.py  monoid.py
